kubernetes/main/apps/monitoring/jaeger/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: production-lb-collector
  annotations:
    io.cilium/lb-ipam-ips: ${CONFIG_MAIN_SVC_JAEGER_ADDR}
spec:
  type: LoadBalancer
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/name: production
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
